# monidroid

./: .gitignore  .gitmodules  CMakeLists.txt  Monidroid.sln  README.md  vcpkg-configuration.json  vcpkg.json
MonidroidDriver/: Driver.cpp  Driver.h
SecondMonitorService/: Main.cpp  SecondMonitorService.vcxproj
common/: CMakeLists.txt  MonidroidCommon.vcxproj  MonidroidCommon.vcxproj.filters  monidroid.h
common/monidroid/: debug.h  edid.h  iddcx.h  logger.h  protocol.h
control/: build-backend.mjs  control.d.ts  package.json  tsconfig.json
control/backend/: main.ts  preload.ts  tsconfig.json  wsservice.ts
control/common/: control.d.ts  control.types.ts  ipc.types.ts  wsservice.types.ts
control/src/: App.tsx  MenuButtons.tsx  main.tsx  theme.css  tsconfig.json  vite.config.ts  window.css
control/src/hooks/: useAppTheme.tsx
control/src/pages/: DevicePage.tsx  HomePage.tsx  SettingsPage.tsx
control/src/server/: websocket.ts
control/src/services/: control.ts  wsservice.ts
deploy/: deploy-linux.sh
deploy/config/: config.qs  config.xml
deploy/linux/: monidroid.desktop  monidroid.service
iddcx-driver/: Adapter.cpp  Adapter.h  CMakeLists.txt  Driver.cpp  Driver.h  Main.cpp  Main.h  MonidroidDriver.inf  MonidroidDriver.vcxproj  MonidroidDriver.vcxproj.filters  Monitor.cpp  Monitor.h  iddcx.h
js-client/: index.html  package.json  tsconfig.json  vite.config.ts
js-client/backend/: main.ts  tsconfig.json
js-client/src/: App.tsx  MenuButtons.tsx  index.html  main.tsx  style.css  tsconfig.json
js-client/src/hooks/: useAppTheme.tsx
js-client/src/pages/: DevicePage.tsx  HomePage.tsx  SettingsPage.tsx
js-client/src/server/: websocket.ts
js-client/src/services/: wsservice.ts
server/: CMakeLists.txt  client.cpp  client.h  control.h  echoserver.cpp  echoserver.h  main.cpp  native.h  native2.h  server.cpp  server.h  uWebSocketsConfig.cmake  usbserver.cpp  usbserver.h
server/linux/: evdi.cpp  misc.cpp
server/src/: client.cpp  client.h  echoserver.cpp  main.cpp  server.cpp  server.h  utils.h
server/src/linux/: utils.cpp
server/src/win32/: client.h  utils.cpp  utils.h
server/win32/: iddcx.cpp  misc.cpp
tests/: CMakeLists.txt  edid.cpp  test.c  usb.cpp
